fixed font and login spacing

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -14,7 +14,7 @@ body {
   margin: 0;
   margin-bottom: 3em;
   padding: 0;
-  font-family: 'Helvetica', 'Impact', 'Arial Black', sans-serif;
+  font-family: 'Arial Black', sans-serif;
   /*	display:none;*/
 }
 
